=== 1.9.0 / ??:

* N minor enhancement:

  * install_gem automatically installs missing dependencies. From Dr. Nic.
  * Parameterized history and readme paths for github users (*sigh*).
  * Added rspec support including having both tests and specs.
  * Match RubyGems' RDoc behavior and removed rdoc_pattern attribute.  Use
    extra_rdoc_files instead.

* N bug fixes:

  * Fixed rdoc title command-line parameters.

=== 1.8.3 / 2009-01-20:

* 1 minor enhancement:

  * Refactored sow's naming code to Hoe.normalize_names and wrote some
    tests to flush out inconsistencies.

=== 1.8.2 / 2008-10-24:

* 1 minor enhancement:

  * Now asks Inline for known inlined classes if you package w/ INLINE=1.

=== 1.8.1 / 2008-10-22

* 1 bug fix:

  * Fixes for windows compatibility from Luis Lavena.

=== 1.8.0 / 2008-10-09

* 5 minor enhancements:

  * Added Hoe.add_include_dirs to make setting up rake deps easier.
  * Removed unused optional group arg in sow.
  * Added testlib variable so you can specify what test library to use.
  * Added deps:list to help you review dependent projects.
  * Added deps:email to help you communicate with dependent projects.
  * Added deps:fetch to help you search through dependent projects.

=== 1.7.0 / 2008-06-30

* 3 minor enhancements:

  * Use rdoc 2.x gem if available. Eric likes his backslashes.
  * Added extra_dev_deps for new rubygems developer dependencies.
    * Switched hoe to dev dep. Fork off, bitches.
  * Finally got a sane test that does something. Hey... it's a start.

=== 1.6.0 / 2008-06-18

* 1 minor enhancement

  * blog categories! Defaults to array with project's name. Thanks Aaron!

=== 1.5.3 / 2008-05-20

* 1 Bug Fix

  * hoe really really needs better tests. I suck. :/

=== 1.5.2 / 2008-05-20

* 4 Minor Enhancements:

  * Added multiruby_skip attribute for 'rake multi' version invalidation.
  * Improved error messages when files are missing.
  * Added rubygems post_install_message accessor. Thanks to Dr. Nic.